--- a/public/index.html
+++ b/public/index.html
@@ -201,8 +201,8 @@
 					</span>
 
 					<span>
-						<a href="mailto:gabriel@scripler.com" class="email-text">Gabrielius Gudynas</a>, Code Monkey<br />
-						Loves pushing code.
+						<a href="mailto:roxana@scripler.com" class="email-text">Roxana Dobre</a>, Frontend developer<br />
+						Is addicted to cinnamon and collects lamb-toys.
 					</span>
 				</div>
 			</div>
