--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -362,6 +362,7 @@
 				<span class="menu-box label left-menu-parameter-margin">Language</span>
 				<span class="menu-box inputfield full-size" data-ng-class="{ 'text-saved': metaLanguageSaved }">
 					<input type="text" name="output_language" id="output_language" data-ng-model="project.metadata.language" data-ng-model-options="{ debounce: 2000 }" />
+					<!--<autocomplete data-ng-model="project.metadata.language" data-attr-placeholder="Start Typing the Language of the Book" value="languages.description" data="languages" data-click-activation="true" data-on-select="updateLanguages"></autocomplete>-->
 					<span class="statusfield" data-ng-class="{ 'text-saved': metaLanguageSaved }">Saved</span>
 				</span>
 				<span class="menu-box label left-menu-parameter-margin">Description</span>
