--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -1,5 +1,6 @@
 <link rel="stylesheet" type="text/css" href="pages/css/shared/default.css" />
 <link rel="stylesheet" type="text/css" href="pages/css/pages/project.css" />
+<link rel="stylesheet" type="text/css" href="pages/css/shared/angucomplete-alt.css"/>
 <link rel="stylesheet" type="text/css" href="pages/css/shared/fonts.css">
 
 <div class="container">
