--- a/public/create/index.html
+++ b/public/create/index.html
@@ -32,6 +32,7 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular-sanitize.js"></script>
 	<script type="text/javascript" src="scripts/angular-local-storage.min.js"></script>
 	<script type="text/javascript" src="scripts/angular-file-upload.min.js"></script>
+	<script type="text/javascript" src="scripts/angucomplete-alt.js"></script>
 	<script type="text/javascript" src="scripts/html5-sortable.js"></script>
 	<script type="text/javascript" src="scripts/ngProgress.min.js"></script>
 	<script type="text/javascript" src="scripts/utils-shared.js"></script>
