changes after code review

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -259,7 +259,7 @@
 		<div id="menu-left-content-options" class="menu-options" data-ng-show="showDocuments" data-ng-class="{ 'open' : showNewOptions || showImportOptions || showBottomOptions }">
 			<div class="options-bottom-box">
 				<div data-ng-show="showNewOptions">
-					<a data-ng-click="addProjectDocument()">Untitled</a><br>
+					<a data-ng-click="addProjectDocument()">New Chapter</a><br>
 				</div>
 				<div data-ng-show="showImportOptions">
 					<div class="upload-box" data-ng-file-drop="onFileSelect($files)" data-ng-file-drag-over-class="dragover"
