--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -305,16 +305,22 @@
 		<div class="menu-item-right inserts" data-ng-show="showFinalizeOptions">
 			<ul>
 				<li data-ng-click="finalizeOptionChosen('showFinalizeCoverOptions');" class="insertOption first" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
-					<img src="pages/images/insert_cover.png" alt="Cover" title="Cover" />
+					<img src="pages/images/insert_cover.png" alt="Add cover image" title="Add cover image" />
 				</li>
 				<li data-ng-click="finalizeOptionChosen('showFinalizeTitlepageOptions');" class="insertOption" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTitlepageOptions' }">
 					<img src="pages/images/insert_titlepage.png" alt="Title page" title="Title page" />
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeCoverOptions' }">
 					<div class="right-menu-options">
-						<span class="menu-box">
+						<span class="right-menu-feature-title">
+							Add cover
+						</span>
+						<span class="right-menu-feature-text">
+							Add an existing cover image to the beginning of the book. This image will also represent the book on virtual book shelves and in ebook stores.
+						</span>
+						<span class="menu-box center-text right-menu-parameter-margin">
 							<input type="file" id="coverInput" data-ng-file-select="onCoverSelect($files)" accept="image/*" data-ng-hide="true">
-							<label for="coverInput">Create a cover</label>
+							<label for="coverInput">Add cover image</label>
 						</span>
 					</div>
 				</li>
