inserted extra text to table of contents

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -339,10 +339,13 @@
 				</li>
 				<li class="insertOptionProperties" data-ng-class="{ 'expanded' : activeFinalizeOption === 'showFinalizeTocOptions' }">
 					<span class="right-menu-feature-title">
-						Generate Table of Contents
+						Generate<br />Table of Contents
 					</span>
 					<span class="right-menu-feature-text">
-						Preview
+						The table of contents will be inserted in the beginning of the ebook and will be accessible in ebook readers for easy navigation.
+					</span>
+					<span class="right-menu-feature-text">
+						<br />Preview
 					</span>
 					<span class="menu-box right-menu-parameter-margin">
 						<span class="option" data-ng-repeat="tocs in toc"><a data-ng-click="anchorScrollTo(tocs);">{{tocs.text}}</a></span>
