--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -290,13 +290,14 @@
 
 	<div id="menu-right-tabs" class="menu-tabs right" ondragstart="return false;" ondrop="return false;">
 		<div class="menu-tab" data-ng-class="{ 'selectedTab' : showFinalizeOptions }" data-ng-click="showFinalizeOptions = !showFinalizeOptions; showOutput = false;">
-			<img src="pages/images/finalize.svg" width="20">
+			<img src="pages/images/finalize.svg" width="20" />
 		</div>
 		<div class="menu-tab output" data-ng-class="{ 'selectedTab' : showOutput }" data-ng-click="showOutput = !showOutput; showFinalizeOptions = false;">
-			<img src="pages/images/output.svg" width="20">
+			<img src="pages/images/output.svg" width="20" />
 		</div>
 		<div class="menu-tab feedback">
-			<img src="pages/images/feedback.svg" width="20">
+			<a ng-if="user._id && !user.isDemo" href="http://talk.scripler.com/session/sso?return_path=%2F" target="_blank"><img src="pages/images/feedback.svg" width="20" /></a>
+			<a ng-if="!user._id || user.isDemo" href="http://talk.scripler.com/" target="_blank"><img src="pages/images/feedback.svg" width="20" /></a>
 		</div>
 	</div>
 	<div id="menu-right" class="menu-right" data-ng-class="{ 'open' : showFinalizeOptions || showOutput }">
