--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -295,9 +295,8 @@
 		<div class="menu-tab output" data-ng-class="{ 'selectedTab' : showOutput }" data-ng-click="showOutput = !showOutput; showFinalizeOptions = false;">
 			<img src="pages/images/output.svg" width="20" />
 		</div>
-		<div class="menu-tab feedback">
-			<a ng-if="user._id && !user.isDemo" href="http://talk.scripler.com/session/sso?return_path=%2F" target="_blank"><img src="pages/images/feedback.svg" width="20" /></a>
-			<a ng-if="!user._id || user.isDemo" href="http://talk.scripler.com/" target="_blank"><img src="pages/images/feedback.svg" width="20" /></a>
+		<div class="menu-tab feedback" data-ng-click="openFeedback()">
+			<img src="pages/images/feedback.svg" width="20" />
 		</div>
 	</div>
 	<div id="menu-right" class="menu-right" data-ng-class="{ 'open' : showFinalizeOptions || showOutput }">
