--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -64,9 +64,11 @@
 
 		<!--<section class="section-projects" data-ng-click="editingProjectTitle = false;">-->
 		<section class="section-projects">
+			<a href=""> <!-- Ensure that the whole "New ebook" (+) icon shows a "hyperlink hand" icon -->
 			<div class="project new" data-ng-click="addProject();">
-				<p>+</p>
+				<p class="project-new-sign">+</p>
 			</div>
+			</a>
 			<div class="project" data-ng-animate="'animate'" data-ng-class="{ 'archived' : project.archived }" data-ng-hide="project.archived && !user.showArchived" data-ng-repeat="project in projects track by $index">
 				<a class="project-options-show" data-ng-class="{ 'open' : showProjectOptions }" data-ng-click="showProjectOptions = !showProjectOptions">
 					<div class="arrow"></div>
