--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -7,10 +7,10 @@
 
 	<div id="menu-left-tabs" class="menu-tabs left" ondragstart="return false;" ondrop="return false;">
 		<div class="menu-tab" data-ng-class="{ 'selectedTab' : showDocuments }" data-ng-click="showDocuments = !showDocuments; showTypo = false; showInsert = false;">
-			<img src="pages/images/documents.svg" width="20">
+			<img src="pages/images/contents.svg" width="20">
 		</div>
 		<div class="menu-tab" data-ng-class="{ 'selectedTab' : showTypo }" data-ng-click="showTypo = !showTypo; hideStyleEditor(); showDocuments = false; showInsert = false; focusEditor();">
-			<img src="pages/images/typography.svg" width="20">
+			<img src="pages/images/design.svg" width="20">
 		</div>
 		<div class="menu-tab" data-ng-class="{ 'selectedTab' : showInsert }" data-ng-click="showInsert = !showInsert; showDocuments = false; showTypo = false;">
 			<img src="pages/images/insert.svg" width="20">
